fix nav-bar on mobile

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -136,3 +136,47 @@ hr.section-divider {
 #announcement-text.fade-out {
   opacity: 0;
 }
+
+.site-header .wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.site-title {
+  font-size: 1.8rem;
+  margin-bottom: 0.5em;
+}
+
+.site-nav {
+  margin-top: 0.5em;
+}
+
+.site-nav .nav {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1em;
+  justify-content: center;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+@media (min-width: 700px) {
+  .site-header .wrapper {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    text-align: left;
+  }
+
+  .site-title {
+    margin-bottom: 0;
+  }
+
+  .site-nav {
+    margin-top: 0;
+  }
+}
+
